/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.registry.accounts;

message Credentials {
    string type = 1;
    repeated string data = 2;
}

message CreateRequest {
    string title = 1; // New Account title
    Credentials auth = 2; // Credentials for New Account
    string namespace = 3; // Namespace to put Account under
    optional int32 access = 4; // Account access level to parent namespace
}

message CreateResponse {
    string uuid = 1;
}

message GetRequest {
    string uuid = 1;
}

message Account {
    string uuid = 1;
    string title = 2;
}

message UpdateResponse {
    bool result = 1;
}

message ListRequest {
    optional string namespace = 1; // Namespace ID to seek account in
    optional int32 depth = 2; // Depth 
}

message ListResponse {
    repeated Account pool = 1;
}

message SetCredentialsRequest {
    string account = 1;
    Credentials auth = 2;
}

message SetCredentialsResponse {
    bool result = 1;
}

message TokenRequest {
    Credentials auth = 1;
    int32 exp = 2;
    bool root_claim = 3;
    string sp_claim = 4;
    string instance_claim = 5;
}

message TokenResponse {
    string token = 1;
}

message DeleteRequest {
    string uuid = 1;
}

message DeleteResponse {
    bool result = 1;
}
